--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
-  "yaml.schemas": {
-    "https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/playbook": "file:///home/madhan/git/kubernetes-the-hard-way-pulumi/ansible/roles/certificate-authority/tasks/requirement.yml"
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml",
+    "editor.autoIndent": "none",
+    "editor.formatOnSave": true
   },
   "ansible.python.interpreterPath": "/home/madhan/git/kubernetes-the-hard-way-pulumi/venv/bin/python",
   "files.associations": {
