--- a/ansible/roles/certificate-authority/tasks/main.yml
+++ b/ansible/roles/certificate-authority/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# - name: Run ca_certs task file
-#   ansible.builtin.include_tasks: ca_certs.yml
-- name: Run copy_certs task file
+- name: Include ca_certs task file
+  ansible.builtin.include_tasks: ca_certs.yml
+- name: Include copy_certs task file
   ansible.builtin.include_tasks: copy_certs.yml
