--- a/ansible/roles/certificate-authority/tasks/copy_certs.yml
+++ b/ansible/roles/certificate-authority/tasks/copy_certs.yml
@@ -20,7 +20,7 @@
     src: ca.pem
     dest: /home/ubuntu
 
-- name: Copy ca files into worker node
+- name: Copy worker key file into worker node
   when: inventory_hostname in groups['worker']
   loop:
     - 0
@@ -39,5 +39,5 @@
     - 2
   ansible.builtin.copy:
     mode: u=rw,g=r,o=r
-    src: "worker-{{ item }}-key.pem"
+    src: "worker-{{ item }}.pem"
     dest: /home/ubuntu
