--- a/ansible_vars.yml
+++ b/ansible_vars.yml
@@ -5,11 +5,23 @@ os:
 kubectl:
   version: 1.27.4
 
+kubernetes:
+  version: 1.27.4
+
+crictl:
+  version: 1.28.0
+
+runc:
+  version: 1.1.9
+
+cni:
+  version: 1.3.0
+
+containerd:
+  version: 1.7.7
+
 cfssl:
   version: 1.6.4
-
-etcd:
-  version: 3.4.15
 
 worker_plane_ip:
   - 10.0.1.20
@@ -31,4 +43,4 @@ worker_plane_public_ip:
   - $WORKER_PLANE_IP_1
   - $WORKER_PLANE_IP_2
 
-external_ip: $EXTERNAL_IP
+kubernetes_public_address: $KUBERNETES_PUBLIC_ADDRESS
