--- a/ansible/roles/data-encryption-keys/tasks/data_encryption.yml
+++ b/ansible/roles/data-encryption-keys/tasks/data_encryption.yml
@@ -17,7 +17,7 @@
         src: "encryption-config.yaml.j2"
         dest: "{{ playbook_dir }}/encryption-config.yaml"
         mode: preserve
-- name: Copy the encryption-config.yaml encryption config file to each controller instance
+- name: Copy the encryption-config.yaml file to each controller instance
   when: inventory_hostname in groups['controller']
   ansible.builtin.copy:
     mode: u=rwx,g=r,o=r
