--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -23,6 +23,9 @@ containerd:
 cfssl:
   version: 1.6.4
 
+etcd:
+  version: 3.4.27
+
 worker_plane_ip:
   - 10.0.1.20
   - 10.0.1.21
@@ -34,13 +37,15 @@ control_plane_ip:
   - 10.0.1.12
 
 control_plane_public_ip:
-  - 52.54.213.227
-  - 44.202.10.209
-  - 44.201.178.165
+  - 54.174.230.213
+  - 54.209.210.153
+  - 34.230.82.53
 
 worker_plane_public_ip:
-  - 54.167.183.144
-  - 54.172.161.169
-  - 3.84.112.133
+  - 54.82.76.85
+  - 34.228.75.152
+  - 54.147.144.162
 
-kubernetes_public_address: kubernetes-17da8dd8157a7341.elb.us-east-1.amazonaws.com
+kubernetes_public_address: kubernetes-5bdcaeb2472e0471.elb.us-east-1.amazonaws.com
+
+encryption_key: 6SyscoYh/PByzgVP/t3PkIIGQzp2mcSl6gwgy7HFyz4=
