--- a/ansible/roles/bootstrapping-etcd/tasks/install_etcd.yml
+++ b/ansible/roles/bootstrapping-etcd/tasks/install_etcd.yml
@@ -1,6 +1,6 @@
 ---
 - name: Setup ETCD in controller nodes
-  when: inventory_hostname == "controller"
+  when: inventory_hostname in groups['controller']
   block:
     - name: Download ETCD binary
       ansible.builtin.unarchive:
@@ -20,15 +20,24 @@
 
     - name: Ensure etcd directory exists
       ansible.builtin.file:
-        path: /etc/etcd
+        path: "{{ item }}"
         state: directory
         mode: u=rwx,g=r,o=r
+      loop:
+        - "/etc/etcd/"
+        - "/var/lib/etcd"
 
-    - name: Ensure var/lib etcd directory exists
-      ansible.builtin.file:
-        path: /var/lib/etcd
-        state: directory
-        mode: u=rwx,g=r,o=r
+    # - name: Ensure etcd directory exists
+    #   ansible.builtin.file:
+    #     path: /etc/etcd
+    #     state: directory
+    #     mode: u=rwx,g=r,o=r
+
+    # - name: Ensure var/lib etcd directory exists
+    #   ansible.builtin.file:
+    #     path: /var/lib/etcd
+    #     state: directory
+    #     mode: u=rwx,g=r,o=r
 
     - name: Copy pem files to etcd folder
       ansible.builtin.copy:
@@ -45,14 +54,22 @@
         url: http://169.254.169.254/latest/meta-data/local-ipv4
         return_content: true
       register: internal_ip
+      changed_when: true
 
     - name: Retrieve ETCD_NAME from user-data
-      ansible.builtin.shell:
-        cmd: |
-          set -o pipefail
-          curl -s http://169.254.169.254/latest/user-data/ | tr '|' '\\n' | grep '^name' | cut -d'=' -f2
-      changed_when: false
+      ansible.builtin.uri:
+        url: http://169.254.169.254/latest/user-data/
+        return_content: true
+      changed_when: true
       register: etcd_name
+
+    - name: Print version Internal IP Address
+      ansible.builtin.debug:
+        msg: "Internal IP Address: {{ internal_ip.content }}"
+
+    - name: Print version ETCD_NAME
+      ansible.builtin.debug:
+        msg: "ETCD_NAME: {{ etcd_name.content }}"
 
     - name: Create ETCD systemd unit file
       ansible.builtin.template:
@@ -64,5 +81,5 @@
       ansible.builtin.systemd:
         name: etcd
         state: restarted
-        enabled: true
         daemon_reload: true
+        enabled: true
