fix: minor issues related to bootstrapping worker node

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -45,3 +45,10 @@
     - controller
   roles:
     - bootstrapping-kubernetes-controllers
+
+- name: Bootstrap the kubernetes worker plane
+  become: true
+  hosts:
+    - worker
+  roles:
+    - bootstrapping-kubernetes-workers
