--- a/ansible/roles/bootstrapping-kubernetes-workers/tasks/bootstrap_worker.yml
+++ b/ansible/roles/bootstrapping-kubernetes-workers/tasks/bootstrap_worker.yml
@@ -1,14 +1,17 @@
 ---
 - name: Bootstrap worker nodes
-  when: inventory_hostname == "worker"
+  when: inventory_hostname in groups['worker']
   block:
+    - name: Update cache
+      ansible.builtin.apt:
+        update_cache: true
+
     - name: Install the OS dependencies
       ansible.builtin.apt:
         pkg:
           - socat
           - conntrack
           - ipset
-      update_cache: true
 
     - name: Disable swap
       ansible.builtin.command:
@@ -20,7 +23,7 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
-      mode: u=rwx,g=r,o=r
+        mode: u=rwx,g=r,o=r
       loop:
         - "/etc/cni/net.d"
         - "/opt/cni/bin"
@@ -28,7 +31,7 @@
         - "/var/lib/kube-proxy"
         - "/var/lib/kubernetes"
         - "/var/run/kubernetes"
-        - "/etc/ccontainerd"
+        - "/etc/containerd"
         - "tmp"
 
     - name: Download and copy Kubernetes binaries
@@ -36,16 +39,15 @@
         - kubectl
         - kube-proxy
         - kubelet
-      ansible.builtin.unarchive:
-        src: https://dl.k8s.io/v{{ kubernetes.version }}/bin/{{ os.name }}/{{ os.arch }}/{{ item }}
-        dest: /usr/local/bin/{{ item }}
-        remote_src: true
+      ansible.builtin.get_url:
+        url: https://dl.k8s.io/v{{ kubernetes.version }}/bin/{{ os.name }}/{{ os.arch }}/{{ item }}
+        dest: /usr/local/bin
         mode: u=rwx,g=r,o=r
 
     - name: Download and install crictl
       ansible.builtin.unarchive:
-        src: https://github.com/kubernetes-sigs/cri-tools/releases/download/\
-          v{{ crictl.version }}/crictl-v{{ crictl.version }}-{{ os.name }}-{{ os.arch }}.tar.gz
+        src: "https://github.com/kubernetes-sigs/cri-tools/releases/download/\
+          v{{ crictl.version }}/crictl-v{{ crictl.version }}-{{ os.name }}-{{ os.arch }}.tar.gz"
         dest: /usr/local/bin/
         remote_src: true
         mode: u=rwx,g=r,o=r
@@ -65,15 +67,15 @@
 
     - name: Download and unarchive containerd
       ansible.builtin.unarchive:
-        src: https://github.com/containerd/containerd/releases/download/\
-          v{{ containerd.version }}/containerd-{{ containerd.version }}-{{ os.name }}-{{ os.arch }}.tar.gz
+        src: "https://github.com/containerd/containerd/releases/download/\
+          v{{ containerd.version }}/containerd-{{ containerd.version }}-{{ os.name }}-{{ os.arch }}.tar.gz"
         dest: /tmp
         remote_src: true
         mode: u=rwx,g=r,o=r
 
     - name: Move the containerd contents to the destination directory
-      ansible.builtin.command:
-        cmd: mv /tmp/bin/* /bin/
+      ansible.builtin.shell:
+        cmd: sudo mv /tmp/bin/* /bin/
       changed_when: true
 
     - name: Retrieve the Pod CIDR range for the current compute instance
@@ -83,6 +85,8 @@
           curl -s http://169.254.169.254/latest/user-data/ \
             | tr "|" "\n" | grep "^pod-cidr" | cut -d"=" -f2
       changed_when: false
+      args:
+        executable: /bin/bash
       register: pod_cidr
 
     - name: Create bridge network configuration file
@@ -93,21 +97,21 @@
 
     - name: Copy loopback network configuration file
       ansible.builtin.copy:
-        src: 99-loopback.conf
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/99-loopback.conf"
         dest: /etc/cni/net.d/99-loopback.conf
         mode: u=rwx,g=r,o=r
       changed_when: true
 
     - name: Copy the containerd configuration file
       ansible.builtin.copy:
-        src: config.toml
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/config.toml"
         dest: /etc/containerd/config.toml
         mode: u=rwx,g=r,o=r
       changed_when: true
 
     - name: Copy the containerd.service systemd unit file
       ansible.builtin.copy:
-        src: containerd.service
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/containerd.service"
         dest: /etc/systemd/system/containerd.service
         mode: u=rwx,g=r,o=r
       changed_when: true
@@ -118,21 +122,29 @@
           set -o pipefail
           curl -s http://169.254.169.254/latest/user-data/ \
             | tr "|" "\n" | grep "^name" | cut -d"=" -f2
+        executable: /bin/bash
       changed_when: false
       register: worker_name
 
     - name: Move the kubelet files
-      ansible.builtin.command:
+      ansible.builtin.shell:
         cmd: |
-          sudo mv {{ worker_name }}-key.pem {{ worker_name }}.pem /var/lib/kubelet/
-          sudo mv {{ worker_name }}.kubeconfig /var/lib/kubelet/kubeconfig
-          sudo mv ca.pem /var/lib/kubernetes/
+          mv {{ worker_name.stdout }}-key.pem {{ worker_name.stdout }}.pem /var/lib/kubelet/
+          mv {{ worker_name.stdout }}.kubeconfig /var/lib/kubelet/kubeconfig
+          mv ca.pem /var/lib/kubernetes/
       changed_when: true
 
     - name: Copy the kubelet config file
       ansible.builtin.template:
-        src: kubelet-config.yaml
+        src: kubelet-config.yaml.j2
         dest: /var/lib/kubelet/kubelet-config.yaml
+        mode: u=rwx,g=r,o=r
+      changed_when: true
+
+    - name: Create the kubelet.service systemd unit file
+      ansible.builtin.copy:
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/kubelet.service"
+        dest: /etc/systemd/system/kubelet.service
         mode: u=rwx,g=r,o=r
       changed_when: true
 
@@ -140,6 +152,20 @@
       ansible.builtin.command:
         cmd: |
           sudo mv kube-proxy.kubeconfig /var/lib/kube-proxy/kubeconfig
+      changed_when: true
+
+    - name: Copy the kube-proxy-config.yaml configuration file
+      ansible.builtin.copy:
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/kube-proxy-config.yaml"
+        dest: /var/lib/kube-proxy/kube-proxy-config.yaml
+        mode: u=rwx,g=r,o=r
+      changed_when: true
+
+    - name: Create the kube-proxy.service systemd unit file
+      ansible.builtin.copy:
+        src: "{{ playbook_dir }}/roles/bootstrapping-kubernetes-workers/templates/kube-proxy.service"
+        dest: /etc/systemd/system/kube-proxy.service
+        mode: u=rwx,g=r,o=r
       changed_when: true
 
     - name: Start containerd systemd service
