--- a/ansible/roles/bootstrapping-etcd/tasks/install_etcd.yml
+++ b/ansible/roles/bootstrapping-etcd/tasks/install_etcd.yml
@@ -13,7 +13,7 @@
         src: "/tmp/etcd-v{{ etcd.version }}-{{ os.name }}-{{ os.arch }}/{{ item }}"
         dest: "/usr/local/bin/{{ item }}"
         remote_src: true
-        mode: u=rwx,g=r,o=r
+        mode: u=rwx,g=rx,o=rx
       loop:
         - etcd
         - etcdctl
@@ -22,7 +22,7 @@
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
-        mode: u=rwx,g=r,o=r
+        mode: u=rwx,g=rx,o=rx
       loop:
         - "/etc/etcd/"
         - "/var/lib/etcd"
@@ -31,7 +31,7 @@
       ansible.builtin.copy:
         src: "{{ item }}"
         dest: "/etc/etcd/{{ item }}"
-        mode: u=rwx,g=r,o=r
+        mode: u=rwx,g=rx,o=rx
       loop:
         - ca.pem
         - kubernetes-key.pem
@@ -55,7 +55,7 @@
       ansible.builtin.template:
         src: etcd.service.j2
         dest: /etc/systemd/system/etcd.service
-        mode: u=rwx,g=r,o=r
+        mode: u=rwx,g=rx,o=rx
 
     - name: Enable ETCD
       ansible.builtin.systemd:
