--- a/ansible/roles/data-encryption-keys/tasks/data_encryption.yml
+++ b/ansible/roles/data-encryption-keys/tasks/data_encryption.yml
@@ -10,6 +10,6 @@
 - name: Copy the encryption-config.yaml file to each controller instance
   when: inventory_hostname in groups['controller']
   ansible.builtin.copy:
-    mode: u=rwx,g=r,o=r
+    mode: u=rwx,g=rx,o=rx
     src: encryption-config.yaml
     dest: /home/ubuntu
