--- a/ansible/roles/kubernetes-config-files/tasks/copy_kube_config_files.yml
+++ b/ansible/roles/kubernetes-config-files/tasks/copy_kube_config_files.yml
@@ -6,14 +6,14 @@
     - kube-controller-manager.kubeconfig
     - kube-scheduler.kubeconfig
   ansible.builtin.copy:
-    mode: u=rwx,g=r,o=r
+    mode: u=rwx,g=rx,o=rx
     src: "{{ item }}"
     dest: /home/ubuntu
 
 - name: Copy kube-proxy kubeconfig files to worker instance
   when: inventory_hostname in groups['worker']
   ansible.builtin.copy:
-    mode: u=rwx,g=r,o=r
+    mode: u=rwx,g=rx,o=rx
     src: kube-proxy.kubeconfig
     dest: /home/ubuntu
 
@@ -24,6 +24,6 @@
     - worker-1
     - worker-2
   ansible.builtin.copy:
-    mode: u=rwx,g=r,o=r
+    mode: u=rwx,g=rx,o=rx
     src: "{{ item }}.kubeconfig"
     dest: /home/ubuntu
