--- a/ansible/roles/bootstrapping-kubernetes-controllers/tasks/bootstrap_controller.yml
+++ b/ansible/roles/bootstrapping-kubernetes-controllers/tasks/bootstrap_controller.yml
@@ -48,11 +48,23 @@
         dest: /etc/systemd/system/kube-apiserver.service
         mode: u=rwx,g=rx,o=rx
 
+    - name: Move the kube-controller-manager kubeconfig into place
+      ansible.builtin.command:
+        cmd: |
+          mv kube-controller-manager.kubeconfig /var/lib/kubernetes/
+      changed_when: true
+
     - name: Create kube-controller-manager systemd unit file
       ansible.builtin.template:
         src: kube-controller-manager.service.j2
         dest: /etc/systemd/system/kube-controller-manager.service
         mode: u=rwx,g=rx,o=rx
+
+    - name: Move the kube-scheduler kubeconfig into place
+      ansible.builtin.command:
+        cmd: |
+          mv kube-scheduler.kubeconfig /var/lib/kubernetes/
+      changed_when: true
 
     - name: Copy kubernetes schdeuler file
       ansible.builtin.copy:
